--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
                 <div class="music-title">🎵 Birthday Blues for the Mets 🎵</div>
                 <div class="soundcloud">
                     <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-                        src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/dustin-darcy/birthday-blues-for-the-mets&color=%23ff5500&inverse=false&auto_play=true&show_user=true"></iframe>
+                        src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/dustin-darcy/birthday-blues-for-the-mets&color=%23ff6600&auto_play=true&buying=false&liking=false&download=false&sharing=false&show_artwork=true&show_comments=false&show_playcount=false&show_user=true&hide_related=true&visual=false"></iframe>
                 </div>
+                <div class="music-click-prompt" id="musicPrompt">🎵 Click to Play Music 🎵</div>
                 <div class="song-plays">Song Plays: <span id="songPlays">0</span></div>
             </div>
             <div class="game-instructions">⚾ Click the baseballs to hit home runs! ⚾</div>
