Add star message container (motd at bottom now) and enhance visual styles for star messages. Styling prep for streaks, achievements, golden balls, etc.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         </div>
         
         <div class="bottom-section">
+            <div class="star-message-container" id="starMessageContainer"></div>
             <div class="music-container">
                 <div class="music-title">🎵 Birthday Blues for the Mets 🎵</div>
                 <div class="soundcloud">
