Add ASCII font support and enhance baseball game mechanics
- Included ascii-font.js for star message rendering.
- Modified createExplosion function to support golden explosions.
- Enhanced baseball game logic with streak milestones and golden baseballs.
- Updated score display to reflect current streaks.
- Improved debug functionality to reset game state.
- Refined star message creation with responsive scrolling.

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
     <!-- External Scripts -->
     <script src="js/utils.js"></script>
+    <script src="js/ascii-font.js"></script>
     <script src="js/animations.js"></script>
     <script src="js/star-messages.js"></script>
     <script src="js/baseball-game.js"></script>
