initialization for win/losses

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             <div class="neon-text birthday">Birthday</div>
             <div class="neon-text steve">Steve!</div>
             
+            <!-- <div class="mets-info" id="metsInfo">
+                🧡💙 Let's Go Mets! 💙🧡
+            </div> -->
             <div class="mets-info" id="metsInfo">
                 🧡💙 Let's Go Mets! Currently 41-24! 💙🧡
             </div>
